# csgitbot

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.ini  csgitbot.py  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
scripts/: populate.py
src/: configs.py  controller.py  decorators.py  github_utils.py  logs.py  main.py  my_types.py  prova.py  service.py  test.py
src/endpoints/: __init__.py  github.py  oauth.py
src/services/: repomanager.py
static/: index.html
