[tool.poetry]
name = "csgitbot"
version = "0.1.0"
description = "A bot to manage CartaBinaria pull requests"
authors = ["Angelo 'Flecart' Huang <xuanqiang.huang@studio.unibo.it>"]
readme = "README.md"
include = [
    {path = "src"},
    {path = "config.ini"},
    {path = ".env.example"},
]

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^1.58.2"
fastapi = "^0.95.2"
pydantic = "^1.10.8"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
configparser = "^5.3.0"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
gitpython = "^3.1.41"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.scripts]
start = "csgitbot:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
